Add link to purchase a team license

--- a/src/pages/blog/2022-05-23-headless-ui-v1-6-tailwind-ui-team-management/index.mdx
+++ b/src/pages/blog/2022-05-23-headless-ui-v1-6-tailwind-ui-team-management/index.mdx
@@ -175,7 +175,9 @@ What we landed on was a purely link based invitation system, where you could jus
 
 This makes it super easy to invite your team without a bunch of tedious data entry, and revoke access if someone leaves right in the UI instead of by changing your shared password.
 
-This is available now for anyone with a Tailwind UI team account — just open the dropdown menu and click "My Team" to name your team and invite your co-workers!
+This is available now for anyone with a Tailwind UI team account — just open the dropdown menu and click "My Team" to name your team and start inviting your co-workers.
+
+You can [purchase a license for your team](https://tailwindui.com/pricing) on the Tailwind UI website, or [upgrade to a team license](https://tailwindui.com/upgrade-team) if you have a personal license and want to start using Tailwind UI with your team.
 
 ---
 
