--- a/src/pages/docs/functions-and-directives.mdx
+++ b/src/pages/docs/functions-and-directives.mdx
@@ -163,10 +163,10 @@ If you try to `@apply` a custom class you've defined in your global CSS in one o
 
 @layer components {
   .card {
-    background-color: theme('colors.white');
-    border-radius: theme('borderRadius.lg');
-    padding: theme('spacing.6');
-    box-shadow: theme('boxShadow.xl');
+    background-color: theme(colors.white);
+    border-radius: theme(borderRadius.lg);
+    padding: theme(spacing.6);
+    box-shadow: theme(boxShadow.xl);
   }
 }
 ```
@@ -199,10 +199,10 @@ module.exports = {
     plugin(function ({ addComponents, theme }) {
       addComponents({
         '.card': {
-          backgroundColor: theme('colors.white'),
-          borderRadius: theme('borderRadius.lg'),
-          padding: theme('spacing.6'),
-          boxShadow: theme('boxShadow.xl'),
+          backgroundColor: theme(colors.white),
+          borderRadius: theme(borderRadius.lg),
+          padding: theme(spacing.6),
+          boxShadow: theme(boxShadow.xl),
         }
       })
     })
@@ -224,11 +224,9 @@ Tailwind adds a few custom functions you can use in your CSS to access Tailwind-
 
 Use the `theme()` function to access your Tailwind config values using dot notation.
 
-This can be a useful alternative to `@apply` when you want to reference a value from your theme configuration for only part of a declaration:
-
 ```css
 .content-area {
-  height: calc(100vh - theme('spacing.12'));
+  height: calc(100vh - theme(spacing.12));
 }
 ```
 
@@ -236,7 +234,7 @@ If you need to access a value that contains a dot (like the `2.5` value in the s
 
 ```css
 .content-area {
-  height: calc(100vh - theme('spacing[2.5]'));
+  height: calc(100vh - theme(spacing[2.5]));
 }
 ```
 
@@ -246,7 +244,7 @@ Since Tailwind uses a [nested object syntax](/docs/customizing-colors#color-obje
 
 ```css
 .btn-blue {
-  background-color: theme('colors.blue-500');
+  background-color: theme(colors.blue-500);
 }
 ```
 
@@ -254,7 +252,15 @@ Since Tailwind uses a [nested object syntax](/docs/customizing-colors#color-obje
 
 ```css
 .btn-blue {
-  background-color: theme('colors.blue.500');
+  background-color: theme(colors.blue.500);
+}
+```
+
+To adjust the opacity of a color retrieved with `theme`, use a slash followed by the opacity value you want to use:
+
+```css
+.btn-blue {
+  background-color: theme(colors.blue.500 / 75%);
 }
 ```
 
