--- a/src/pages/docs/text-align.mdx
+++ b/src/pages/docs/text-align.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Text Alignment"
+title: "Text Align"
 shortTitle: Text Align
 description: "Utilities for controlling the alignment of text."
 ---
