fix overflowing corners

--- a/src/pages/blog/tailwindcss-v3-1/index.mdx
+++ b/src/pages/blog/tailwindcss-v3-1/index.mdx
@@ -254,7 +254,7 @@ I know what you're thinking — _"I have never in my life wanted to build a tabl
 One situation where this is actually super useful is when building a table with a sticky header row and you want a persistent bottom border under the headings:
 
 <Example p="none" hint="Scroll this table to see the sticky header row in action">
-  <div class="isolate h-72 overflow-auto">
+  <div class="isolate h-72 overflow-auto rounded-xl">
     <table class="min-w-full border-separate border-spacing-0">
       <thead class="bg-gray-50">
         <tr>
