make YouTube video rounded

--- a/src/pages/blog/tailwindcss-v3-1/index.mdx
+++ b/src/pages/blog/tailwindcss-v3-1/index.mdx
@@ -13,8 +13,9 @@ export const meta = {
 
 It's been about six months since we released [Tailwind CSS v3.0](/blog/tailwindcss-v3), and even though we've been collecting a lot of little improvements in the codebase since then, we just didn't have _that-one-feature_ yet that makes you say _"okay, it's release-cuttin' time"_.
 
-<div className="aspect-w-16 aspect-h-9 my-12 bg-slate-700 rounded-xl">
+<div className="aspect-w-16 aspect-h-9 my-12 bg-slate-700 rounded-xl overflow-hidden">
   <iframe
+    className="rounded-xl"
     src="https://www.youtube.com/embed/nOQyWbPO2Ds"
     frameBorder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
