Update OG description

--- a/src/pages/blog/tailwindcss-v3-1/index.mdx
+++ b/src/pages/blog/tailwindcss-v3-1/index.mdx
@@ -5,7 +5,7 @@ import discordMessage from './discord-message.png'
 
 export const meta = {
   title: 'Tailwind CSS v3.1: You wanna get nuts? Come on, let\'s get nuts!',
-  description: `Some description about this post`,
+  description: `Now with first-party TypeScript types, arbitrary variants, improved CSS variable DX, and tons more.`,
   date: '2022-06-07T15:00:00.000Z',
   authors: [adamwathan],
   image: card,
