--- a/src/pages/blog/tailwindcss-v3-1/index.mdx
+++ b/src/pages/blog/tailwindcss-v3-1/index.mdx
@@ -29,7 +29,7 @@ Then on a random Saturday night a couple of weeks ago, I was talking to Robin in
 
 Twenty minutes later Robin had a working proof of concept _(in six lines of code!)_, and after another hour or so of Jordan performing regex miracles in our class detection engine, [arbitrary variants](https://github.com/tailwindlabs/tailwindcss/pull/8299) were born and we had our release-worthy feature.
 
-So here it is — Tailwind CSS v3.1! For a complete list of every fix and improvemement check out the [release notes](https://github.com/tailwindlabs/tailwindcss/releases/tag/v3.1.0), but here's the highlights:
+So here it is — Tailwind CSS v3.1! For a complete list of every fix and improvement check out the [release notes](https://github.com/tailwindlabs/tailwindcss/releases/tag/v3.1.0), but here's the highlights:
 
 - [First-party TypeScript types](#first-party-type-script-types)
 - [Built-in support for CSS imports in the CLI](#built-in-support-for-css-imports-in-the-cli)
