--- a/src/pages/blog/tailwindcss-v3-1/index.mdx
+++ b/src/pages/blog/tailwindcss-v3-1/index.mdx
@@ -34,7 +34,7 @@ So here it is — Tailwind CSS v3.1! For a complete list of every fix and improv
 - [First-party TypeScript types](#first-party-type-script-types)
 - [Built-in support for CSS imports in the CLI](#built-in-support-for-css-imports-in-the-cli)
 - [Change color opacity when using the theme function](#change-color-opacity-when-using-the-theme-function)
-- [Easier CSS variable color configuration](easier-css-variable-color-configuration)
+- [Easier CSS variable color configuration](#easier-css-variable-color-configuration)
 - [Border spacing utilities](#border-spacing-utilities)
 - [Enabled and optional variants](#enabled-and-optional-variants)
 - [Prefers-contrast variants](#prefers-contrast-variants)
