--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -973,7 +973,7 @@ Arbitrary variants are just format strings that represent the selector, wrapped 
 
 </SnippetGroup>
 
-The format string is the same as what you'd use with the [`addVariant` plugin API]((/docs/plugins#adding-variants)), with the `&` representing the selector being modified.
+The format string is the same as what you'd use with the [`addVariant` plugin API](/docs/plugins#adding-variants), with the `&` representing the selector being modified.
 
 Arbitrary variants can be stacked with built-in modifiers or with each other, just like the rest of the modifiers in Tailwind:
 
