--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -399,13 +399,13 @@ When defining your colors this way, make sure that the format of your CSS variab
 
 @layer base {
   :root {
-    /* For rgb(255 115 179 / <alpha-value) */
+    /* For rgb(255 115 179 / <alpha-value>) */
     --color-primary: 255 115 179;
 
-    /* For hsl(198deg 93% 60% / <alpha-value) */
+    /* For hsl(198deg 93% 60% / <alpha-value>) */
     --color-primary: 198deg 93% 60%;
 
-    /* For rgba(255, 115, 179, <alpha-value) */
+    /* For rgba(255, 115, 179, <alpha-value>) */
     --color-primary: 255, 115, 179;
   }
 }
